--- a/src/main/resources/templates/user/menu.html
+++ b/src/main/resources/templates/user/menu.html
@@ -25,14 +25,14 @@
 
       <div class="user_menu_list">
         <button class="nutri_item user_menu">
-          <a href="/user/likes">
-            <img th:src="@{/img/user2-removebg-preview.png}" alt="Image 1" />
+          <a href="">
+            <img src="/img/user2-removebg-preview.png" alt="Image 1" />
           </a>
           <p>내가찜한목록</p>
         </button>
         <button class="nutri_item user_menu">
-          <a href="/user/info">
-            <img th:src="@{/img/user1-removebg-preview.png}" alt="Image 1" />
+          <a href="">
+            <img src="/img/user1-removebg-preview.png" alt="Image 1" />
           </a>
           <p>회원정보수정</p>
         </button>
