--- a/src/main/resources/static/css/nutri_result.css
+++ b/src/main/resources/static/css/nutri_result.css
@@ -16,140 +16,87 @@
   margin-left: 20%;
 }
 
-#nutri_main {
+#nutri_main{
   text-align: center;
-  margin: 10px;
+  margin: 100px;
 }
-#main_title{
-  margin-bottom: 5%;
-  margin-top: 5%;
-}
-.text_context{
-  display: flex;
-  flex-direction: column;
-<<<<<<< HEAD
 
+.nutri_product {
+  margin: 20%;
+  margin-top: 10%;
 }
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: 30px;
-  margin-left: 30px;
+
+.nutri_product img {
+  width: 240px;
 }
-.row-1{
+
+.nutri_product table {
   display: flex;
-  
-=======
+  align-items: center;
 }
-.row {
+
+.nutri_product table td {
+  margin-left: 10px;
+}
+
+.nutri_product table td button {
   display: flex;
+  justify-items: flex-start;
+}
+.like-button{
+  border: 10px white;
+}
+.like-button img{
+  width: 40px;
+}
+.non-like-button{
+  border: 10px white;
+}
+.non-like-button img{
+  width: 40px;
+}
+
+
+body {
+  min-height: calc(100vh - 100px);
+}
+
+.container {
+  padding: 100px;
+}
+
+h1 {
   text-align: center;
-  justify-content: center;
-  margin-left: 30%;
-  margin-right: 30%;
-  flex-direction: row-reverse;
 }
-.row-1{
-  display: flex;
->>>>>>> a885e0ed32ba5a6a902765079339f156953fc977
-}
-.text_area {
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.product-info {
-  display: flex;
-  align-items: center;
-<<<<<<< HEAD
-  justify-content: space-between; 
-  /* margin-bottom: 10px; */
-=======
-  justify-content: space-between; /* 추가 */
-  margin-bottom: 10px;
->>>>>>> a885e0ed32ba5a6a902765079339f156953fc977
-}
-.product-info .product-name {
-  margin-right: 10px;
-}
-.product-info {
-  display: flex;
-  align-items: center;
-<<<<<<< HEAD
-  justify-content: space-between; 
-  margin-bottom: 20px;
-=======
-  justify-content: space-between; /* 추가 */
-  margin-bottom: 10px;
->>>>>>> a885e0ed32ba5a6a902765079339f156953fc977
-}
+
 #product {
   width: 250px;
 }
-.text_area img {
-  margin-right: 20px;
+
+.text_context {
+  display: inline-block;
+  align-items: center;
 }
 
-.name-container {
-<<<<<<< HEAD
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-=======
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
->>>>>>> a885e0ed32ba5a6a902765079339f156953fc977
+.main-likes {
+  margin: 60px;
 }
 
-.name-container span {
-  margin-bottom: 10px;
-<<<<<<< HEAD
+.main-likes img {
+  max-width: 100%;
+  height: auto;
 }
 
-.text_area .col-6 {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column-reverse;
-  flex-wrap: nowrap;
-  /* align-content: center; */
-  align-items: baseline;
-=======
-}
-.text_area .col-6 {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column-reverse;
-  flex-wrap: nowrap;
-  align-content: center;
-  align-items: baseline;
+.main-likes .context {
+  padding-left: 30px;
 }
 
-.text_area .col-6 .product-info .product-name {
-  text-align: left;
->>>>>>> a885e0ed32ba5a6a902765079339f156953fc977
-}
-
-.text_area .col-6 .product-info .product-name {
-  text-align: left;
-}
-.text_area.col-md-6.offset-md-2 {
-  margin-right: 1%;
-}
-
-.text_area.col-md-6.offset-md-1 {
-  margin-left: 1%;
-}
-.main-container label{
-  justify-content: flex-start;
-}
 .heart-button {
   border: none;
   background-color: transparent;
   padding: 0;
   margin-left: 10px;
-  font-size: 16px;
+  font-size: 25px;
   color: #ccc;
   cursor: pointer;
 }
@@ -199,4 +146,44 @@
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
+}
+
+#nutri_main{
+  text-align: center;
+  margin: 100px;
+}
+
+.nutri_product {
+  margin: 20%;
+  margin-top: 10%;
+}
+
+.nutri_product img {
+  width: 240px;
+}
+
+.nutri_product table {
+  display: flex;
+  align-items: center;
+}
+
+.nutri_product table td {
+  margin-left: 10px;
+}
+
+.nutri_product table td button {
+  display: flex;
+  justify-items: flex-start;
+}
+.like-button{
+  border: 10px white;
+}
+.like-button img{
+  width: 40px;
+}
+.non-like-button{
+  border: 10px white;
+}
+.non-like-button img{
+  width: 40px;
 }
