--- a/src/main/resources/static/css/nutri_result.css
+++ b/src/main/resources/static/css/nutri_result.css
@@ -16,79 +16,51 @@
   margin-left: 20%;
 }
 
-#nutri_main{
+#nutri_main {
   text-align: center;
-  margin: 100px;
+  margin: 10px;
 }
 
-.nutri_product {
-  margin: 20%;
-  margin-top: 10%;
-}
-
-.nutri_product img {
-  width: 240px;
-}
-
-.nutri_product table {
-  display: flex;
-  align-items: center;
-}
-
-.nutri_product table td {
-  margin-left: 10px;
-}
-
-.nutri_product table td button {
-  display: flex;
-  justify-items: flex-start;
-}
-.like-button{
-  border: 10px white;
-}
-.like-button img{
-  width: 40px;
-}
-.non-like-button{
-  border: 10px white;
-}
-.non-like-button img{
-  width: 40px;
-}
-
-
-body {
-  min-height: calc(100vh - 100px);
-}
-
-.container {
-  padding: 100px;
-}
-
-h1 {
-  text-align: center;
-}
-
-#product {
-  width: 250px;
+#main_title {
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 .text_context {
-  display: inline-block;
-  align-items: center;
+  width: 100%;
 }
 
-.main-likes {
-  margin: 60px;
+.grid-contents {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.main-likes img {
-  max-width: 100%;
-  height: auto;
+.grid-item1 {
+  float: left;
 }
 
-.main-likes .context {
-  padding-left: 30px;
+.grid-item2 {
+  float: right;
+}
+
+.p_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.p_img {
+  float: left;
+  margin-right: 10px 0;
+}
+
+.p_img img {
+  width: 350px;
+}
+
+.labels {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .heart-button {
@@ -96,7 +68,7 @@ h1 {
   background-color: transparent;
   padding: 0;
   margin-left: 10px;
-  font-size: 25px;
+  font-size: 24px;
   color: #ccc;
   cursor: pointer;
 }
@@ -108,7 +80,6 @@ h1 {
 .heart-button.active i {
   color: rgba(255, 0, 0, 0.719);
 }
-
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -146,44 +117,4 @@ h1 {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
-}
-
-#nutri_main{
-  text-align: center;
-  margin: 100px;
-}
-
-.nutri_product {
-  margin: 20%;
-  margin-top: 10%;
-}
-
-.nutri_product img {
-  width: 240px;
-}
-
-.nutri_product table {
-  display: flex;
-  align-items: center;
-}
-
-.nutri_product table td {
-  margin-left: 10px;
-}
-
-.nutri_product table td button {
-  display: flex;
-  justify-items: flex-start;
-}
-.like-button{
-  border: 10px white;
-}
-.like-button img{
-  width: 40px;
-}
-.non-like-button{
-  border: 10px white;
-}
-.non-like-button img{
-  width: 40px;
 }
