--- a/src/main/resources/templates/admin/nutri_add.html
+++ b/src/main/resources/templates/admin/nutri_add.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
-  <!-- START : header -->
+<!-- START : header -->
 
-<<<<<<< HEAD
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,188 +12,79 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>관리자 영양제 추가</title>
 </head>
-=======
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/admin_nutri_add.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <title>관리자 영양제 추가</title>
-  </head>
->>>>>>> 1dd594956a84b1922c4d2f7885a443b462951bc5
 
-  <body>
-    <div id="header-placeholder"></div>
+<body>
+  <div id="header-placeholder"></div>
 
-<<<<<<< HEAD
   <div class="admin_nutri_add">
     <h1>영양제 추가</h1>
     <form action="/admin/nutri_add" method="POST">
       <table>
         <tbody>
-=======
-    <div class="admin_nutri_add">
-      <h1>영양제 추가</h1>
-      <form>
-        <table>
-          <tbody>
-            <tr>
-              <td>분류 코드:</td>
-              <td>
-                <input
-                  type="text"
-                  name="classifi_code"
-                  placeholder="내용을 입력해주세요"
-                />
-                <button id="check_id">중복확인</button>
-              </td>
-              <td>이름:</td>
-              <td>
-                <input
-                  type="text"
-                  name="nutri_name"
-                  placeholder="내용을 입력해주세요"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td>구분:</td>
-              <td>
-                <input
-                  type="text"
-                  name="category"
-                  placeholder="내용을 입력해주세요"
-                />
-              </td>
-              <td>제조사:</td>
-              <td>
-                <input
-                  type="text"
-                  name="manufacturer"
-                  placeholder="내용을 입력해주세요"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td>주성분:</td>
-              <td>
-                <input
-                  type="text"
-                  name="main_ingredient"
-                  placeholder="내용을 입력해주세요"
-                />
-              </td>
-              <td>효능:</td>
-              <td>
-                <input
-                  type="text"
-                  name="effect"
-                  placeholder="내용을 입력해주세요"
-                />
-              </td>
-            </tr>
-          </tbody>
->>>>>>> 1dd594956a84b1922c4d2f7885a443b462951bc5
           <tr>
-            <td>복용법:</td>
-            <td colspan="2" class="textarea-row">
-              <textarea
-                name="dosage"
-                maxlength="500"
-                placeholder="내용을 입력해주세요"
-              ></textarea>
+            <td>분류 코드:</td>
+            <td>
+              <input type="text" name="nutri_idx" placeholder="내용을 입력해주세요" th:value="${nutri_idx}"/>
+              <button id="check_id">중복확인</button>
+            </td>
+            <td>이름:</td>
+            <td>
+              <input type="text" name="nutri_name" placeholder="내용을 입력해주세요" th:value="${name}"/>
             </td>
           </tr>
           <tr>
-            <td>주의사항:</td>
-            <td colspan="2" class="textarea-row">
-              <textarea
-                name="caution"
-                maxlength="500"
-                placeholder="내용을 입력해주세요"
-              ></textarea>
+            <td>구분:</td>
+            <td>
+              <input type="text" name="category" placeholder="내용을 입력해주세요" th:value="${category}"/>
+            </td>
+            <td>제조사:</td>
+            <td>
+              <input type="text" name="manufacturer" placeholder="내용을 입력해주세요" th:value="${company}"/>
             </td>
           </tr>
           <tr>
-            <td>기타:</td>
-            <td colspan="2" class="textarea-row">
-              <textarea
-                name="others"
-                maxlength="500"
-                placeholder="내용을 입력해주세요"
-              ></textarea>
+            <td>주성분:</td>
+            <td>
+              <input type="text" name="main_ingredient" placeholder="내용을 입력해주세요" th:value="${base}"/>
+            </td>
+            <td>효능:</td>
+            <td>
+              <input type="text" name="effect" placeholder="내용을 입력해주세요" th:value="${effect}"/>
             </td>
           </tr>
-<<<<<<< HEAD
         </tbody>
         <tr>
           <td>복용법:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="dosage" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
+            <textarea name="dosage" maxlength="500" placeholder="내용을 입력해주세요" th:value="${taking}"></textarea>
           </td>
         </tr>
         <tr>
           <td>주의사항:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
+            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요" th:value="${warning}"></textarea>
           </td>
         </tr>
         <tr>
           <td>기타:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="others" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
+            <textarea name="others" maxlength="500" placeholder="내용을 입력해주세요" th:value="${etc}"></textarea>
           </td>
         </tr>
+        </tbody>
         <tr>
           <td>이미지 첨부:</td>
-          <td><input type="file" name="image" accept="image/*" /></td>
+          <td><input type="file" name="image" accept="image/*" th:value="${img}"/></td>
         </tr>
       </table>
       <div class="button-row">
-        <input type="button" value="취소" onclick="location.href='nutri_list'"/>
+        <input type="button" value="취소" onclick="location.href='/admin/nutri_list'"/>
         <input type="submit" class="check" value="확인" />
       </div>
     </form>
   </div>
   <div id="footer-placeholder"></div>
-  <script>
-    fetch('/header.html')
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('header-placeholder').innerHTML = html;
-      });
-
-    fetch('/footer.html')
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('footer-placeholder').innerHTML = html;
-      });
-  </script>
+  <script th:src="@{/js/hf.js}"></script>
 </body>
 
 </html>
-=======
-          <tr>
-            <td>이미지 첨부:</td>
-            <td><input type="file" name="image" accept="image/*" /></td>
-          </tr>
-        </table>
-        <div class="button-row">
-          <input type="button" value="취소" />
-          <input type="submit" class="check" value="확인" />
-        </div>
-      </form>
-    </div>
-    <div id="footer-placeholder"></div>
-    <script th:src="@{/js/hf.js}"></script>
-  </body>
-</html>
->>>>>>> 1dd594956a84b1922c4d2f7885a443b462951bc5
