230615-Admin 기능 추가 외

--- a/src/main/resources/templates/admin/nutri_edit.html
+++ b/src/main/resources/templates/admin/nutri_edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <!-- START : header -->
 
 <head>
@@ -18,69 +18,68 @@
 
   <div class="admin_nutri_edit">
     <h1>영양제 수정</h1>
-    <form>
+    <form th:object=${nutri} action="/admin/nutri_edit" method="POST">
       <table>
-        <thead>
+        <tbody>
           <tr>
             <td>분류 코드:</td>
             <td>
-              <input type="text" name="classifi_code" readonly th:value="${nutri.id}" required />
+              <input type="text" name="idx" placeholder="내용을 입력해주세요" th:value="${idx}" th:field="${nutri.idx}" readonly/>
+              <button id="check_id">중복확인</button>
             </td>
             <td>이름:</td>
             <td>
-              <input type="text" name="nutri_name" placeholder="내용을 입력해주세요" />
+              <input type="text" name="name" placeholder="내용을 입력해주세요" th:value="${name}" th:field="${nutri.name}" />
             </td>
           </tr>
-        </thead>
-        <tbody>
           <tr>
             <td>구분:</td>
             <td>
-              <input type="text" name="category" placeholder="내용을 입력해주세요" />
+              <input type="text" name="category" placeholder="내용을 입력해주세요" th:value="${category}" th:field="${nutri.category}"/>
             </td>
             <td>제조사:</td>
             <td>
-              <input type="text" name="manufacturer" placeholder="내용을 입력해주세요" />
+              <input type="text" name="company" placeholder="내용을 입력해주세요" th:value="${company}" th:field="${nutri.company}"/>
             </td>
           </tr>
           <tr>
             <td>주성분:</td>
             <td>
-              <input type="text" name="main_ingredient" placeholder="내용을 입력해주세요" />
+              <input type="text" name="base" placeholder="내용을 입력해주세요" th:value="${base}" th:field="${nutri.base}"/>
             </td>
             <td>효능:</td>
             <td>
-              <input type="text" name="effect" placeholder="내용을 입력해주세요" />
+              <input type="text" name="effect" placeholder="내용을 입력해주세요" th:value="${effect}" th:field="${nutri.effect}"/>
             </td>
           </tr>
         </tbody>
         <tr>
           <td>복용법:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="dosage" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
+            <textarea name="taking" maxlength="500" placeholder="내용을 입력해주세요" th:value="${taking}" th:field="${nutri.taking}"></textarea>
           </td>
         </tr>
         <tr>
           <td>주의사항:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
+            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요" th:value="${caution}" th:field="${nutri.caution}"></textarea>
           </td>
         </tr>
         <tr>
           <td>기타:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="others" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
+            <textarea name="etc" maxlength="500" placeholder="내용을 입력해주세요" th:value="${etc}" th:field="${nutri.etc}"></textarea>
           </td>
         </tr>
+        </tbody>
         <tr>
           <td>이미지 첨부:</td>
-          <td><input type="file" name="image" accept="image/*" /></td>
+          <td><input type="file" name="img" accept="image/*" th:value="${img}" th:src="${img}" ></td>
         </tr>
       </table>
       <div class="button-row">
-        <input type="button" value="취소" />
+        <input type="button" value="취소" onclick="location.href='/admin/nutri_list'"/>
         <input type="submit" class="check" value="확인" />
-        <input type="submit" class="delete" value="삭제" />
       </div>
     </form>
   </div>
