--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -24,7 +24,7 @@
       <main class="form-signin w-100 m-auto container">
         <h2 class="h1 mb-3 fw-normal">회원가입</h2>
         <div class="form-align">
-          <form action="/join" method="Post">
+          <form action="/user/join" method="Post">
             <div class="info-title">이메일</div>
             <div class="form-floating">
               <input
