--- a/src/main/resources/templates/admin/nutri_add.html
+++ b/src/main/resources/templates/admin/nutri_add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <!-- START : header -->
 
 <head>
@@ -24,12 +24,12 @@
           <tr>
             <td>분류 코드:</td>
             <td>
-              <input type="text" name="nutri_idx" placeholder="내용을 입력해주세요" th:value="${nutri_idx}"/>
+              <input type="text" name="idx" placeholder="내용을 입력해주세요" th:value="${idx}"/>
               <button id="check_id">중복확인</button>
             </td>
             <td>이름:</td>
             <td>
-              <input type="text" name="nutri_name" placeholder="내용을 입력해주세요" th:value="${name}"/>
+              <input type="text" name="name" placeholder="내용을 입력해주세요" th:value="${name}"/>
             </td>
           </tr>
           <tr>
@@ -39,13 +39,13 @@
             </td>
             <td>제조사:</td>
             <td>
-              <input type="text" name="manufacturer" placeholder="내용을 입력해주세요" th:value="${company}"/>
+              <input type="text" name="company" placeholder="내용을 입력해주세요" th:value="${company}"/>
             </td>
           </tr>
           <tr>
             <td>주성분:</td>
             <td>
-              <input type="text" name="main_ingredient" placeholder="내용을 입력해주세요" th:value="${base}"/>
+              <input type="text" name="base" placeholder="내용을 입력해주세요" th:value="${base}"/>
             </td>
             <td>효능:</td>
             <td>
@@ -56,25 +56,25 @@
         <tr>
           <td>복용법:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="dosage" maxlength="500" placeholder="내용을 입력해주세요" th:value="${taking}"></textarea>
+            <textarea name="taking" maxlength="500" placeholder="내용을 입력해주세요" th:value="${taking}"></textarea>
           </td>
         </tr>
         <tr>
           <td>주의사항:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요" th:value="${warning}"></textarea>
+            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요" th:value="${caution}"></textarea>
           </td>
         </tr>
         <tr>
           <td>기타:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="others" maxlength="500" placeholder="내용을 입력해주세요" th:value="${etc}"></textarea>
+            <textarea name="etc" maxlength="500" placeholder="내용을 입력해주세요" th:value="${etc}"></textarea>
           </td>
         </tr>
         </tbody>
         <tr>
           <td>이미지 첨부:</td>
-          <td><input type="file" name="image" accept="image/*" th:value="${img}"/></td>
+          <td><input type="file" name="img" accept="image/*" th:value="${img}"/></td>
         </tr>
       </table>
       <div class="button-row">
