230615-main.css, header.css- 인덱스 css 헤더 css 수정

--- a/html/css/header.css
+++ b/html/css/header.css
@@ -30,8 +30,6 @@
 #checkbox {
   width: 0px;
   height: 100%;
-  padding-right: 0px;
-  margin-left: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,9 +40,8 @@ input[id="icon"] {
 }
 
 input[id="icon"] + label {
-  position: absolute;
+  position: relative;
   display: block;
-  margin: 50px;
   height: 30px;
   cursor: pointer;
   /* 커서를 올려놓을 때 모양이 바뀐다. */
@@ -63,7 +60,7 @@ input[id="icon"] + label > span {
 }
 
 input[id="icon"] + label > span:nth-child(1) {
-  top: 0px;
+  top: 0;
 }
 
 input[id="icon"] + label > span:nth-child(2) {
@@ -73,7 +70,7 @@ input[id="icon"] + label > span:nth-child(2) {
 }
 
 input[id="icon"] + label > span:nth-child(3) {
-  bottom: 0px;
+  bottom: 0;
 }
 
 input[id="icon"]:checked + label > span:nth-child(1) {
