--- a/html/css/main.css
+++ b/html/css/main.css
@@ -66,7 +66,8 @@
   height: 50px;
   line-height: 40px;
   border-radius: 5px;
-  font: 20px bold;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .container #main_contens .main_context {
