230616-영양제 정보 수정 기능

--- a/src/main/resources/templates/admin/nutri_add.html
+++ b/src/main/resources/templates/admin/nutri_add.html
@@ -56,7 +56,7 @@
         <tr>
           <td>복용법:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="taking" maxlength="500" placeholder="내용을 입력해주세요" th:value="${taking}"></textarea>
+            <textarea name="taking" placeholder="내용을 입력해주세요" th:value="${taking}"></textarea>
           </td>
         </tr>
         <tr>
