230616-edit.html, join.css-edit폼 수정, join.css 수정

--- a/html/css/join.css
+++ b/html/css/join.css
@@ -32,8 +32,6 @@ a {
 
 body {
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
   background-color: #fff;
   font-family: 'NanumSquareNeo-Variable';
   font-size: 18px;
@@ -42,6 +40,7 @@ body {
 .container {
   display: grid;
   place-items: center;
+  justify-content: center;
   height: 100vh;
 }
 
@@ -110,7 +109,7 @@ h1 {
   fill: currentColor;
 }
 
-.nav-scroller {
+/* .nav-scroller {
   position: relative;
   z-index: 2;
   height: 2.75rem;
@@ -126,28 +125,29 @@ h1 {
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-}
+} */
 
 .form-align {
-  text-align: center;
+  text-align: left;
 }
 
-form {
+.container form {
   border: 3px solid #00997B;
   border-radius: 20px;
   width: 500px;
-  height: 720px;
   padding: 30px;
   margin-bottom: 100px;
 }
 
-form#user_info {
+#user_info {
+  border: 3px solid #00997B;
+  border-radius: 20px;
   width: 500px;
-  height: 500px;
+  padding: 30px;
+  margin-bottom: 100px;
 }
 
 .form-floating {
-  text-align: left;
   margin-bottom: 20px;
 }
 
@@ -158,25 +158,33 @@ img {
 .info-title {
   font-size: 18px;
   text-align: left;
-  padding: 10px;
 }
 
 .form-floating.gender {
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
   width: 100%;
 }
 
 .form-floating.gender input[type="radio"] {
-  flex: 1;
-  margin-left: 15px;
   margin-right: 10px;
+  vertical-align: -4px;
+  width: 20px;
+  height: 20px;
+}
+
+.form-floating.gender > label{
+  position: initial;
+  padding: 0;
+  border: none;
+  pointer-events: initial;
 }
 
 .user_info {
   margin-left: 12px;
 }
 
-button {
+.form-btn > button {
   margin-top: 20px;
   background-color: #00997B;
 }
