230616 -nutri_add.html, nuti_edit.html, JDBCNutriRepository.java, AdminController.java- nutri_add, edit.css 파일 통합, 영양제 검색/삭제 기능 추가(Repository, Service, Controller)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -66,8 +66,7 @@
   height: 50px;
   line-height: 40px;
   border-radius: 5px;
-  font-size: 20px;
-  font-weight: bold;
+  font: 20px bold;
 }
 
 .container #main_contens .main_context {
