--- a/src/main/resources/static/css/admin_nutri_add.css
+++ b/src/main/resources/static/css/admin_nutri_add.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'NanumSquareNeo-Variable' !important;
   margin: 100px;
 }
 
@@ -32,7 +32,7 @@ td {
 }
 
 .textarea-row {
-  width: 100%;
+  width: 60%;
 }
 
 .input-row input[type="text"],
@@ -42,6 +42,7 @@ td {
 }
 
 .button-row {
+  font-family: 'NanumSquareNeo-Variable' !important;
   margin-top: 20px;
   text-align: center;
 }
@@ -55,13 +56,22 @@ td {
   margin-right: 25px;
 }
 
+.button-row .cancel {
+  font-family: 'NanumSquareNeo-Variable' !important;
+  border: 1px solid #575e4f;
+  background-color: #575e4f;
+  color: #fff;
+}
+
 .button-row .check {
+  font-family: 'NanumSquareNeo-Variable' !important;
   border: 1px solid #00997B;
   background-color: #00997B;
   color: #fff;
 }
 
 .button-row .delete {
+  font-family: 'NanumSquareNeo-Variable' !important;
   background-color: red;
   border: 1px solid red;
   color: #fff;
