--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -128,26 +128,25 @@ h1 {
 } */
 
 .form-align {
-  text-align: left;
+  text-align: center;
 }
 
 .container form {
   border: 3px solid #00997B;
   border-radius: 20px;
   width: 500px;
+  height: 720px;
   padding: 30px;
   margin-bottom: 100px;
 }
 
-#user_info {
-  border: 3px solid #00997B;
-  border-radius: 20px;
+form#user_info {
   width: 500px;
-  padding: 30px;
-  margin-bottom: 100px;
+  height: 500px;
 }
 
 .form-floating {
+  text-align: left;
   margin-bottom: 20px;
 }
 
@@ -158,26 +157,18 @@ img {
 .info-title {
   font-size: 18px;
   text-align: left;
+  padding: 10px;
 }
 
 .form-floating.gender {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
   width: 100%;
 }
 
 .form-floating.gender input[type="radio"] {
+  flex: 1;
+  margin-left: 15px;
   margin-right: 10px;
-  vertical-align: -4px;
-  width: 20px;
-  height: 20px;
-}
-
-.form-floating.gender > label{
-  position: initial;
-  padding: 0;
-  border: none;
-  pointer-events: initial;
 }
 
 .user_info {
